--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,8 @@
 
 
  html, body{
-  font-family: "Arial"
-  font-size:17px;
+  font-family: "Arial";
+  font-size:16px;
   min-height: 100vh;
   background-repeat:repeat-x;
   background-position:left bottom;
@@ -40,7 +40,7 @@ body{
 
 .contact-info{
   padding-top: 20px;
-  font-size: 15px !important;
+  font-size: 16px !important;
 }
 
 .contact-info-tel{
@@ -52,7 +52,6 @@ footer {
   color: #fff;
   font-size: 11px;
 }
-
 
 #myCarousel{
   width: 480px;
