--- a/css/main.css
+++ b/css/main.css
@@ -83,8 +83,9 @@ blockquote{
   font-style: italic;
 }
 
-blockquote small{
-  color:#000;
+blockquote .person{
+  display:block;
+  margin-top: 5px;
 }
 
 .services{
