--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,10 @@ blockquote .person{
   margin-top: 5px;
 }
 
+.person-container{
+  padding-right: 0px;
+}
+
 .services{
   margin-top:70px
 }
@@ -116,15 +120,13 @@ nav li {
   display:inline-block;
   float: left;
   display: table-cell;
-text-align: center;
-width: 16%;
+width: 14%;
 }
 
 /*Style for menu links*/
 nav li a {
   display:block;
   min-width:140px;
-  text-align: center;
   color: #012b65;
   text-decoration: none;
 }
@@ -149,6 +151,29 @@ input[type=checkbox]{
 input[type=checkbox]:checked ~ #menu{
     display: block;
 }
+
+
+.viewphotos {
+  font-size:11.5px;
+  font-family:Arial-Regular, Arial;
+  font-style:normal;
+  color: #FFFFFF;
+  border:none;
+  padding:6px 9px;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  background: #012B65;
+}
+
+.full-gallery{
+  margin-right:11px;
+  margin-bottom:20px;
+}
+.col-2-text{
+  font-size: 13px;
+}
+
 
 
 /*Responsive Styles*/
