--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,9 @@ input[type=checkbox]:checked ~ #menu{
   font-size: 13px;
 }
 
+  .larger{
+    font-size: x-large;
+  }
 
 
 /*Responsive Styles*/
