--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,18 @@ input[type=checkbox]:checked ~ #menu{
     font-size: x-large;
   }
 
+  .carousel img{
+    max-height: 500px;
+  }
+
+.modal-dialog{
+    position: relative;
+    display: table; //This is important 
+    overflow-y: auto;    
+    overflow-x: auto;
+    width: auto;
+    min-width: 300px;   
+}
 
 /*Responsive Styles*/
 
