--- a/css/main.css
+++ b/css/main.css
@@ -214,6 +214,14 @@ input[type=checkbox]:checked ~ #menu{
   line-height: 50px;
     width: 100%;
   }
+
+  #menu a {
+    position: relative;
+    width: 100%;
+    z-index: 100;
+    text-decoration: none;
+    padding-left: 15px;
+  }
   /*Display 'show menu' link*/
   .show-menu {
     display:block;
