--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,7 @@ input[type=checkbox]:checked ~ #menu{
 }
 
 
-.viewphotos {
+a.viewphotos, button.viewphotos {
   font-size:11.5px;
   font-family:Arial-Regular, Arial;
   font-style:normal;
@@ -164,6 +164,7 @@ input[type=checkbox]:checked ~ #menu{
   -webkit-border-radius: 6px;
   border-radius: 6px;
   background: #012B65;
+  text-decoration: none;
 }
 
 .full-gallery{
