iphone tel color fix

--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ body{
 .contact-info-tel{
   font-size: 19px !important;
   font-weight: 500;
-  font-color:#fff;
+  font-color:#fff!important;
 }
 
 footer {
